# Tradegrow

./: DEPLOYMENT_GUIDE.md  Dockerfile  README.md  admin_routes.py  api_routes.py  app.py  backup_script.sh  create_admin.py  data_service.py  dependencies.txt  docker-compose.yml  financial_data_service.py  health_check.py  login_cookies.txt  mock_auth.py  models.py  nginx.conf  oauth_config.py  package-lock.json  package.json  production.env  production_config.py  pyproject.toml  replit.md  requirements_minimal.txt  requirements_production.txt  requirements_windows.txt  routes.py  routes_backup.py  test_cookies.txt  webpack.config.js
frontend/src/: App.jsx  admin.jsx  index.jsx  user.jsx
frontend/src/components/admin/: AdminDashboard.jsx  StockManagementTab.jsx  StockScreening.jsx  SubscriptionManagementTab.jsx  UserManagement.jsx  UserManagementTab.jsx
frontend/src/components/layout/: Layout.jsx
frontend/src/components/pages/: AdminLoginPage.jsx  ErrorPage.jsx  InvitationPage.jsx  LandingPage.jsx  LoginPage.jsx  SignupPage.jsx
frontend/src/components/user/: UserDashboard.jsx
instance/: tradinggrow.db
static/js/: admin-bundle.js  admin-bundle.js.LICENSE.txt  main-bundle.js  main-bundle.js.LICENSE.txt  user-bundle.js  user-bundle.js.LICENSE.txt
templates/: spa.html
