[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "requests>=2.32.5",
    "stripe>=12.5.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "sendgrid>=6.12.4",
    "flask-cors>=6.0.1",
    "sqlalchemy>=2.0.43",
    "flask-caching>=2.3.1",
    "httpx>=0.28.1",
    "flask-limiter>=3.12",
    "psutil>=7.0.0",
]
